infra/k8s/kong/redis-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: kisandirect
  labels:
    app: redis
spec:
  type: ExternalName
  externalName: "<REPLACE_WITH_ELASTICACHE_ENDPOINT>" # e.g. kisandirect-xxxxx.xxxxxx.ap-south-1.cache.amazonaws.com
  ports:
    - port: 6379
      targetPort: 6379
